<resources>
    <string name="app_name">Story App</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="welcome_to_story_app">Welcome to Story App</string>
    <string name="sign_in_to_show_all_stories">Sign in to show all stories</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_to_create_an_account">Sign up to create an account</string>
    <string name="home">Home</string>
    <string name="description">Description</string>
    <string name="show_password">Show password</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="save_bookmark">Save Bookmark</string>
    <string name="detail_save_bookmark">Detail Save Bookmark</string>
    <string name="bookmark">Bookmark</string>
    <string name="no_bookmarks">No Bookmarks</string>
    <string name="failed_to_capture_an_image">Failed to capture an image</string>
    <string name="failed_to_open_camera">Failed to open camera</string>
    <string name="detail_story">Detail Story</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="don_t_have_permission_to_access_camera">Don\'t have permission to access camera</string>
    <string name="add_new_story">Add New Story</string>
    <string name="add_new_story_guest">Add new Story (Guest)</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="please_insert_the_image_first">Please insert the image first</string>
    <string name="please_fill_the_description_first">Please fill the description first</string>
    <string name="add_new_story_success">Add new story success</string>
    <string name="add_new_story_failed">Add new story failed</string>
    <string name="please_fill_the_email">Please fill the email</string>
    <string name="please_fill_the_password">Please fill the password</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="please_fill_your_name">Please fill your name</string>
    <string name="password_must_be_at_least_8_character">Password must be at least 8 character</string>
    <string name="create_an_account_success">Create an account success</string>
    <string name="create_an_account_failed">Create an account failed</string>
    <string name="sign_out">Sign Out</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="detail_photo_story">Detail Photo Story</string>
    <string name="photo_story">Photo Story</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="email_must_be_a_valid_email">Email must be a valid email</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="retry">Retry</string>
</resources>